First commit in python

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "id": "9826aa0f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "id": "6c56b4dd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "id": "bc11bde6",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "29         10/05/2019          2016  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "id": "70973c91",
    "metadata": {},
    "outputs": [
@@ -561,17 +561,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "11e1cc91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"LicenseIssuedDate\"] = pd.to_datetime(df[\"LicenseIssuedDate\"])\n",
-    "df[\"LicenseExpiredDate\"] = pd.to_datetime(df[\"LicenseExpiredDate\"])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5d1d8cd5",
    "metadata": {},
@@ -582,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "id": "41d75c26",
    "metadata": {},
    "outputs": [
@@ -600,7 +589,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "94112b52",
    "metadata": {},
    "outputs": [],
@@ -630,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "id": "acb43d73",
    "metadata": {},
    "outputs": [
@@ -648,7 +637,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "id": "d54b41a4",
    "metadata": {},
    "outputs": [
@@ -671,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,34 +671,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "id": "6fdc2d38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"BreedName\"] = df[\"BreedName\"].str.replace(\"Unknown\",\"NaN\")\n",
+    "df[\"AnimalBirthYear\"] = df[\"AnimalBirthYear\"].str.replace(\"Unknown\",\"NaN\")\n",
+    "df[\"AnimalBirthYear\"] = df[\"AnimalBirthYear\"].str.replace(\"ERROR: #VALUE!\",\"NaN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "2242f11c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         American Pit Bull Mix / Pit Bull Mix\n",
-       "1                                        Boxer\n",
-       "2                                      Basenji\n",
-       "3                             Akita Crossbreed\n",
-       "4                                      Maltese\n",
-       "                          ...                 \n",
-       "722859                      Shepard Crossbreed\n",
-       "722860                       Poodle, Miniature\n",
-       "722861           Labrador Retriever Crossbreed\n",
-       "722862                       Poodle, Miniature\n",
-       "722863                            Goldendoodle\n",
-       "Name: BreedName, Length: 720943, dtype: object"
+       "array([nan, '2012', '2021', '2010', '2018', '2020', '2015', '2017',\n",
+       "       '2019', '2011', '2014', '2013', '2016', '2009', '2006', '2007',\n",
+       "       '2008', '2001', '2005', '2004', '2002', '2003', '2000', 'NaN',\n",
+       "       '1999', '1996', '1973', '1930', '1990', '1995', '1997', '2022',\n",
+       "       '1992', '1986', '1921', '1922', '1912', '1998', '2023', '1993',\n",
+       "       '1991', '1987', '1934', '1989', '1920', '1923', '18', '317', '720',\n",
+       "       '200', '21', '201', '221', '219', '202', '209'], dtype=object)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"BreedName\"].str.replace(\"Unknown\",\"NaN\")"
+    "df[\"AnimalBirthYear\"].unique()"
    ]
   },
   {
@@ -739,6 +735,215 @@
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c50392e",
+   "metadata": {},
+   "source": [
+    "- Let's rename the columns for easy data handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "134e58a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\n",
+    "    \"AnimalName\":\"Name\",\n",
+    "    \"AnimalGender\":\"Gender\",\n",
+    "    \"AnimalBirthYear\":\"BirthYear\",\n",
+    "    \"BreedName\":\"Breed\",\n",
+    "    \"LicenseIssuedDate\":\"IssuedDate\",\n",
+    "    \"LicenseExpiredDate\":\"ExpiredDate\",\n",
+    "    \"Extract Year\":\"ExtractYear\",\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "33ec2207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>BirthYear</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>ZipCode</th>\n",
+       "      <th>IssuedDate</th>\n",
+       "      <th>ExpiredDate</th>\n",
+       "      <th>ExtractYear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PAIGE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>American Pit Bull Mix / Pit Bull Mix</td>\n",
+       "      <td>10035.0</td>\n",
+       "      <td>2014-09-12</td>\n",
+       "      <td>2017-09-12</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YOGI</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Boxer</td>\n",
+       "      <td>10465.0</td>\n",
+       "      <td>2014-09-12</td>\n",
+       "      <td>2017-10-02</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALI</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Basenji</td>\n",
+       "      <td>10013.0</td>\n",
+       "      <td>2014-09-12</td>\n",
+       "      <td>2019-09-12</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>QUEEN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Akita Crossbreed</td>\n",
+       "      <td>10013.0</td>\n",
+       "      <td>2014-09-12</td>\n",
+       "      <td>2017-09-12</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LOLA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Maltese</td>\n",
+       "      <td>10028.0</td>\n",
+       "      <td>2014-09-12</td>\n",
+       "      <td>2017-10-09</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name Gender BirthYear                                 Breed  ZipCode  \\\n",
+       "0  PAIGE      F      2014  American Pit Bull Mix / Pit Bull Mix  10035.0   \n",
+       "1   YOGI      M      2010                                 Boxer  10465.0   \n",
+       "2    ALI      M      2014                               Basenji  10013.0   \n",
+       "3  QUEEN      F      2013                      Akita Crossbreed  10013.0   \n",
+       "4   LOLA      F      2009                               Maltese  10028.0   \n",
+       "\n",
+       "  IssuedDate ExpiredDate  ExtractYear  \n",
+       "0 2014-09-12  2017-09-12         2016  \n",
+       "1 2014-09-12  2017-10-02         2016  \n",
+       "2 2014-09-12  2019-09-12         2016  \n",
+       "3 2014-09-12  2017-09-12         2016  \n",
+       "4 2014-09-12  2017-10-09         2016  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ba22435b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 720943 entries, 0 to 722863\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype         \n",
+      "---  ------       --------------   -----         \n",
+      " 0   Name         720943 non-null  object        \n",
+      " 1   Gender       720943 non-null  object        \n",
+      " 2   BirthYear    720943 non-null  object        \n",
+      " 3   Breed        720943 non-null  object        \n",
+      " 4   ZipCode      720943 non-null  float64       \n",
+      " 5   IssuedDate   720943 non-null  datetime64[ns]\n",
+      " 6   ExpiredDate  720943 non-null  datetime64[ns]\n",
+      " 7   ExtractYear  720943 non-null  int64         \n",
+      "dtypes: datetime64[ns](2), float64(1), int64(1), object(4)\n",
+      "memory usage: 49.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6bd602",
+   "metadata": {},
+   "source": [
+    "Let's change the data type for certain columns in the right format to help us find insight wiht the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "868737df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"LicenseIssuedDate\"] = pd.to_datetime(df[\"LicenseIssuedDate\"])\n",
+    "df[\"LicenseExpiredDate\"] = pd.to_datetime(df[\"LicenseExpiredDate\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "9e49df1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"ZipCode\"] = df[\"ZipCode\"].astype(str)"
    ]
   }
  ],
