--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 91,
    "id": "9826aa0f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 92,
    "id": "6c56b4dd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 93,
    "id": "bc11bde6",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "29         10/05/2019          2016  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "id": "70973c91",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "id": "41d75c26",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "id": "94112b52",
    "metadata": {},
    "outputs": [],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "id": "acb43d73",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "id": "d54b41a4",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,35 +671,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "6fdc2d38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"BreedName\"] = df[\"BreedName\"].str.replace(\"Unknown\",\"NaN\")\n",
-    "df[\"AnimalBirthYear\"] = df[\"AnimalBirthYear\"].str.replace(\"Unknown\",\"NaN\")\n",
-    "df[\"AnimalBirthYear\"] = df[\"AnimalBirthYear\"].str.replace(\"ERROR: #VALUE!\",\"NaN\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 99,
    "id": "2242f11c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([nan, '2012', '2021', '2010', '2018', '2020', '2015', '2017',\n",
-       "       '2019', '2011', '2014', '2013', '2016', '2009', '2006', '2007',\n",
-       "       '2008', '2001', '2005', '2004', '2002', '2003', '2000', 'NaN',\n",
-       "       '1999', '1996', '1973', '1930', '1990', '1995', '1997', '2022',\n",
-       "       '1992', '1986', '1921', '1922', '1912', '1998', '2023', '1993',\n",
-       "       '1991', '1987', '1934', '1989', '1920', '1923', '18', '317', '720',\n",
-       "       '200', '21', '201', '221', '219', '202', '209'], dtype=object)"
+       "array([2014, 2010, 2013, 2009, 2006, 2008, 2012, 2007, 2005, 2011, 2001,\n",
+       "       2004, 2003, 2000, 2002, 1991, 1992, 1993, 2015, 2016, 1994, 1995,\n",
+       "       1996, 1997, 2017, 1998, 1999, 2018, 2019, 2020, 2021, '2012',\n",
+       "       '2021', '2010', '2018', '2020', '2015', '2017', '2019', '2011',\n",
+       "       '2014', '2013', '2016', '2009', '2006', '2007', '2008', '2001',\n",
+       "       '2005', '2004', '2002', '2003', '2000', 'ERROR: #VALUE!', '1999',\n",
+       "       '1996', '1973', '1930', '1990', '1995', '1997', '2022', '1992',\n",
+       "       '1986', '1921', '1922', '1912', '1998', '2023', '1993', '1991',\n",
+       "       '1987', '1934', '1989', '1920', '1923', '18', '317', '720', '200',\n",
+       "       '21', '201', '221', '219', '202', '209', 2022, 2023, 203, 22, 519,\n",
+       "       202, 1973, 2024, 1987, 1968, 223, 222, 1970, 219, 1989, 19, 1,\n",
+       "       1934, 208, 1923, 209, 204, 18, 17, 1022], dtype=object)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 100,
    "id": "854f279b",
    "metadata": {},
    "outputs": [
@@ -728,7 +721,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 101,
    "id": "134e58a2",
    "metadata": {},
    "outputs": [],
@@ -765,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 102,
    "id": "33ec2207",
    "metadata": {},
    "outputs": [
@@ -808,8 +801,8 @@
        "      <td>2014</td>\n",
        "      <td>American Pit Bull Mix / Pit Bull Mix</td>\n",
        "      <td>10035.0</td>\n",
-       "      <td>2014-09-12</td>\n",
-       "      <td>2017-09-12</td>\n",
+       "      <td>09/12/2014</td>\n",
+       "      <td>09/12/2017</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -819,8 +812,8 @@
        "      <td>2010</td>\n",
        "      <td>Boxer</td>\n",
        "      <td>10465.0</td>\n",
-       "      <td>2014-09-12</td>\n",
-       "      <td>2017-10-02</td>\n",
+       "      <td>09/12/2014</td>\n",
+       "      <td>10/02/2017</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -830,8 +823,8 @@
        "      <td>2014</td>\n",
        "      <td>Basenji</td>\n",
        "      <td>10013.0</td>\n",
-       "      <td>2014-09-12</td>\n",
-       "      <td>2019-09-12</td>\n",
+       "      <td>09/12/2014</td>\n",
+       "      <td>09/12/2019</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -841,8 +834,8 @@
        "      <td>2013</td>\n",
        "      <td>Akita Crossbreed</td>\n",
        "      <td>10013.0</td>\n",
-       "      <td>2014-09-12</td>\n",
-       "      <td>2017-09-12</td>\n",
+       "      <td>09/12/2014</td>\n",
+       "      <td>09/12/2017</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -852,8 +845,8 @@
        "      <td>2009</td>\n",
        "      <td>Maltese</td>\n",
        "      <td>10028.0</td>\n",
-       "      <td>2014-09-12</td>\n",
-       "      <td>2017-10-09</td>\n",
+       "      <td>09/12/2014</td>\n",
+       "      <td>10/09/2017</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -868,15 +861,15 @@
        "3  QUEEN      F      2013                      Akita Crossbreed  10013.0   \n",
        "4   LOLA      F      2009                               Maltese  10028.0   \n",
        "\n",
-       "  IssuedDate ExpiredDate  ExtractYear  \n",
-       "0 2014-09-12  2017-09-12         2016  \n",
-       "1 2014-09-12  2017-10-02         2016  \n",
-       "2 2014-09-12  2019-09-12         2016  \n",
-       "3 2014-09-12  2017-09-12         2016  \n",
-       "4 2014-09-12  2017-10-09         2016  "
+       "   IssuedDate ExpiredDate  ExtractYear  \n",
+       "0  09/12/2014  09/12/2017         2016  \n",
+       "1  09/12/2014  10/02/2017         2016  \n",
+       "2  09/12/2014  09/12/2019         2016  \n",
+       "3  09/12/2014  09/12/2017         2016  \n",
+       "4  09/12/2014  10/09/2017         2016  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 103,
    "id": "ba22435b",
    "metadata": {},
    "outputs": [
@@ -898,17 +891,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 720943 entries, 0 to 722863\n",
       "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count   Dtype         \n",
-      "---  ------       --------------   -----         \n",
-      " 0   Name         720943 non-null  object        \n",
-      " 1   Gender       720943 non-null  object        \n",
-      " 2   BirthYear    720943 non-null  object        \n",
-      " 3   Breed        720943 non-null  object        \n",
-      " 4   ZipCode      720943 non-null  float64       \n",
-      " 5   IssuedDate   720943 non-null  datetime64[ns]\n",
-      " 6   ExpiredDate  720943 non-null  datetime64[ns]\n",
-      " 7   ExtractYear  720943 non-null  int64         \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(1), object(4)\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   Name         720943 non-null  object \n",
+      " 1   Gender       720943 non-null  object \n",
+      " 2   BirthYear    720943 non-null  object \n",
+      " 3   Breed        720943 non-null  object \n",
+      " 4   ZipCode      720943 non-null  float64\n",
+      " 5   IssuedDate   720943 non-null  object \n",
+      " 6   ExpiredDate  720943 non-null  object \n",
+      " 7   ExtractYear  720943 non-null  int64  \n",
+      "dtypes: float64(1), int64(1), object(6)\n",
       "memory usage: 49.5+ MB\n"
      ]
     }
@@ -927,18 +920,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "868737df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"LicenseIssuedDate\"] = pd.to_datetime(df[\"LicenseIssuedDate\"])\n",
-    "df[\"LicenseExpiredDate\"] = pd.to_datetime(df[\"LicenseExpiredDate\"])\n"
+    "df[\"IssuedDate\"] = pd.to_datetime(df[\"IssuedDate\"])\n",
+    "df[\"ExpiredDate\"] = pd.to_datetime(df[\"ExpiredDate\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "id": "9e49df1b",
    "metadata": {},
    "outputs": [],
