--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 119,
    "id": "9826aa0f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 120,
    "id": "6c56b4dd",
    "metadata": {},
    "outputs": [
@@ -32,18 +32,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tb/3_577n455q9bf55gxv6lrs4w0000gp/T/ipykernel_33168/3738971504.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"/Users/Marcy_Student/Desktop/marcy/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")\n"
+      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_98253/3164521452.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"/Users/Marcy_Student/Desktop/Marcy_Projects/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/Marcy_Student/Desktop/marcy/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")"
+    "df = pd.read_csv(\"/Users/Marcy_Student/Desktop/Marcy_Projects/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
    "id": "bc11bde6",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "29         10/05/2019          2016  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "id": "70973c91",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 123,
    "id": "41d75c26",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "id": "94112b52",
    "metadata": {},
    "outputs": [],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 125,
    "id": "acb43d73",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 126,
    "id": "d54b41a4",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 127,
    "id": "2242f11c",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
        "       1934, 208, 1923, 209, 204, 18, 17, 1022], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 128,
    "id": "134e58a2",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 129,
    "id": "33ec2207",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "4  09/12/2014  10/09/2017         2016  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 130,
    "id": "868737df",
    "metadata": {},
    "outputs": [],
@@ -867,125 +867,11 @@
     "df[\"IssuedDate\"] = pd.to_datetime(df[\"IssuedDate\"])\n",
     "df[\"ExpiredDate\"] = pd.to_datetime(df[\"ExpiredDate\"])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e49df1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "be5e88d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 720943 entries, 0 to 722863\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count   Dtype         \n",
-      "---  ------       --------------   -----         \n",
-      " 0   Name         720943 non-null  object        \n",
-      " 1   Gender       720943 non-null  object        \n",
-      " 2   BirthYear    720943 non-null  object        \n",
-      " 3   Breed        720943 non-null  object        \n",
-      " 4   ZipCode      720943 non-null  float64       \n",
-      " 5   IssuedDate   720943 non-null  datetime64[ns]\n",
-      " 6   ExpiredDate  720943 non-null  datetime64[ns]\n",
-      " 7   ExtractYear  720943 non-null  int64         \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(1), object(4)\n",
-      "memory usage: 49.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e29862f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0         Manhattan\n",
-      "1         The Bronx\n",
-      "2         Manhattan\n",
-      "3         Manhattan\n",
-      "4         Manhattan\n",
-      "5         Manhattan\n",
-      "6         Manhattan\n",
-      "7         Manhattan\n",
-      "8          Brooklyn\n",
-      "9          Brooklyn\n",
-      "10        Manhattan\n",
-      "11        Manhattan\n",
-      "12         Brooklyn\n",
-      "13         Brooklyn\n",
-      "14        Manhattan\n",
-      "15        The Bronx\n",
-      "16         Brooklyn\n",
-      "17        Manhattan\n",
-      "18        Manhattan\n",
-      "19    Staten Island\n",
-      "20        Manhattan\n",
-      "21         Brooklyn\n",
-      "22         Brooklyn\n",
-      "23        Manhattan\n",
-      "24         Brooklyn\n",
-      "25        Manhattan\n",
-      "26         Brooklyn\n",
-      "27        Manhattan\n",
-      "28        Manhattan\n",
-      "29    Staten Island\n",
-      "Name: Borough, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "zipcodes = {\n",
-    "    'Manhattan': (10001, 10282),\n",
-    "    'The Bronx': (10451, 10475),\n",
-    "    'Brooklyn': (11201, 11256),\n",
-    "    'Queens': [(11004, 11109), (11351, 11697)],\n",
-    "    'Staten Island': (10301, 10314)\n",
-    "}\n",
-    "def get_borough(zipcode):\n",
-    "    if pd.isna(zipcode):\n",
-    "        return 'Unknown'\n",
-    "    if zipcodes['Manhattan'][0] <= zipcode <= zipcodes['Manhattan'][1]:\n",
-    "        return 'Manhattan'\n",
-    "    elif zipcodes['The Bronx'][0] <= zipcode <= zipcodes['The Bronx'][1]:\n",
-    "        return 'The Bronx'\n",
-    "    elif zipcodes['Brooklyn'][0] <= zipcode <= zipcodes['Brooklyn'][1]:\n",
-    "        return 'Brooklyn'\n",
-    "    elif (zipcodes['Queens'][0][0] <= zipcode <= zipcodes['Queens'][0][1]) or \\\n",
-    "         (zipcodes['Queens'][1][0] <= zipcode <= zipcodes['Queens'][1][1]):\n",
-    "        return 'Queens'\n",
-    "    elif zipcodes['Staten Island'][0] <= zipcode <= zipcodes['Staten Island'][1]:\n",
-    "        return 'Staten Island'\n",
-    "    else:\n",
-    "        return 'Unknown'\n",
-    "\n",
-    "\n",
-    "df['Borough'] = df['ZipCode'].apply(get_borough)\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "data-analysis-env",
    "language": "python",
    "name": "python3"
   },
@@ -999,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
