last update of the data cleaning process

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "9826aa0f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "6c56b4dd",
    "metadata": {},
    "outputs": [
@@ -32,10 +32,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_29604/3164521452.py:1: DtypeWarning:\n",
-      "\n",
-      "Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_71670/3164521452.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"/Users/Marcy_Student/Desktop/Marcy_Projects/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")\n"
      ]
     }
    ],
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "bc11bde6",
    "metadata": {},
    "outputs": [
@@ -513,7 +511,7 @@
        "29         10/05/2019          2016  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "70973c91",
    "metadata": {},
    "outputs": [
@@ -573,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "41d75c26",
    "metadata": {},
    "outputs": [
@@ -591,7 +589,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "94112b52",
    "metadata": {},
    "outputs": [],
@@ -621,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "acb43d73",
    "metadata": {},
    "outputs": [
@@ -639,7 +637,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "d54b41a4",
    "metadata": {},
    "outputs": [
@@ -662,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "2242f11c",
    "metadata": {},
    "outputs": [
@@ -694,7 +692,7 @@
        "       1934, 208, 1923, 209, 204, 18, 17, 1022], dtype=object)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "id": "134e58a2",
    "metadata": {},
    "outputs": [],
@@ -731,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "33ec2207",
    "metadata": {},
    "outputs": [
@@ -842,7 +840,7 @@
        "4  09/12/2014  10/09/2017         2016  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "868737df",
    "metadata": {},
    "outputs": [],
@@ -875,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "2f24b11c",
    "metadata": {},
    "outputs": [],
@@ -908,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "0f08f036",
    "metadata": {},
    "outputs": [
@@ -923,7 +921,7 @@
        "Name: Borough, dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "id": "688b210b",
    "metadata": {},
    "outputs": [
@@ -967,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "559edfd3",
    "metadata": {},
    "outputs": [],
@@ -977,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "5a0dab1b",
    "metadata": {},
    "outputs": [],
@@ -988,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "id": "4ad7f8f3",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1218,7 @@
        "9  September  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "id": "e3fb8c01",
    "metadata": {},
    "outputs": [],
@@ -1250,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "id": "1ae792a0",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1322,7 @@
        "5        Unknown        2504"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "id": "1f23863b",
    "metadata": {},
    "outputs": [
@@ -2190,6 +2188,65 @@
    "source": [
     "fig = px.bar(licenses_by_borough, x=\"Borough\",y=\"IssuedDate\", title=\"Dog licences by borough\")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd4e3ef2",
+   "metadata": {},
+   "source": [
+    "Now let's fiter out unrealistic dogs ages. \n",
+    "In this large dataset, we can get bad data, like:\n",
+    "Dogs that appear to be 30 years old, which is not realistic (the average dog lifespan is 10–15 years)\n",
+    "So let's remove rows where:\n",
+    "- The age is less than 0 → probably a mistake\n",
+    "- The age is more than 25 → extremely rare or likely wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e7ca2ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleaned = df[(df['DogAgeAtLicense'] >= 0) & (df['DogAgeAtLicense'] <= 25)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd51051e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 720803 entries, 0 to 722863\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count   Dtype         \n",
+      "---  ------           --------------   -----         \n",
+      " 0   Name             720803 non-null  object        \n",
+      " 1   Gender           720803 non-null  object        \n",
+      " 2   BirthYear        720803 non-null  float64       \n",
+      " 3   Breed            720803 non-null  object        \n",
+      " 4   ZipCode          720803 non-null  float64       \n",
+      " 5   IssuedDate       720803 non-null  datetime64[ns]\n",
+      " 6   ExpiredDate      720803 non-null  datetime64[ns]\n",
+      " 7   ExtractYear      720803 non-null  int64         \n",
+      " 8   Borough          720803 non-null  object        \n",
+      " 9   DogAgeAtLicense  720803 non-null  float64       \n",
+      " 10  IssueYear        720803 non-null  int32         \n",
+      " 11  IssueMonth       720803 non-null  object        \n",
+      "dtypes: datetime64[ns](2), float64(3), int32(1), int64(1), object(5)\n",
+      "memory usage: 68.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cleaned.info()"
    ]
   }
  ],
