Data cleaning done in Python

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -1332,6 +1332,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65dc27d9",
+   "metadata": {},
+   "source": [
+    "Let's create a quick visual with plotly to see the difference in number of licences for each Borough"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "1f23863b",
@@ -2215,38 +2223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd51051e",
+   "execution_count": 38,
+   "id": "af7df01b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 720803 entries, 0 to 722863\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column           Non-Null Count   Dtype         \n",
-      "---  ------           --------------   -----         \n",
-      " 0   Name             720803 non-null  object        \n",
-      " 1   Gender           720803 non-null  object        \n",
-      " 2   BirthYear        720803 non-null  float64       \n",
-      " 3   Breed            720803 non-null  object        \n",
-      " 4   ZipCode          720803 non-null  float64       \n",
-      " 5   IssuedDate       720803 non-null  datetime64[ns]\n",
-      " 6   ExpiredDate      720803 non-null  datetime64[ns]\n",
-      " 7   ExtractYear      720803 non-null  int64         \n",
-      " 8   Borough          720803 non-null  object        \n",
-      " 9   DogAgeAtLicense  720803 non-null  float64       \n",
-      " 10  IssueYear        720803 non-null  int32         \n",
-      " 11  IssueMonth       720803 non-null  object        \n",
-      "dtypes: datetime64[ns](2), float64(3), int32(1), int64(1), object(5)\n",
-      "memory usage: 68.7+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_cleaned.info()"
+    "df_cleaned.to_csv(\"final_dataset.csv\", index=False)"
    ]
   }
  ],
