Data cleaning in python done

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "9826aa0f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "6c56b4dd",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_71670/3164521452.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"/Users/Marcy_Student/Desktop/Marcy_Projects/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")\n"
+      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_71670/3164521452.py:1: DtypeWarning:\n",
+      "\n",
+      "Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "\n"
      ]
     }
    ],
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "bc11bde6",
    "metadata": {},
    "outputs": [
@@ -511,7 +513,7 @@
        "29         10/05/2019          2016  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "70973c91",
    "metadata": {},
    "outputs": [
@@ -571,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "41d75c26",
    "metadata": {},
    "outputs": [
@@ -589,7 +591,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "94112b52",
    "metadata": {},
    "outputs": [],
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "acb43d73",
    "metadata": {},
    "outputs": [
@@ -637,7 +639,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "id": "d54b41a4",
    "metadata": {},
    "outputs": [
@@ -660,7 +662,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "2242f11c",
    "metadata": {},
    "outputs": [
@@ -692,7 +694,7 @@
        "       1934, 208, 1923, 209, 204, 18, 17, 1022], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "134e58a2",
    "metadata": {},
    "outputs": [],
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "33ec2207",
    "metadata": {},
    "outputs": [
@@ -840,7 +842,7 @@
        "4  09/12/2014  10/09/2017         2016  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "868737df",
    "metadata": {},
    "outputs": [],
@@ -872,8 +874,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29352379",
+   "metadata": {},
+   "source": [
+    "Let's create a dictionary to map zip codes with borough names\n",
+    "- Using borough we are going to explore areas with lower licensing compliance, which can help in targeted public health and safety campaigns. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "id": "2f24b11c",
    "metadata": {},
    "outputs": [],
@@ -906,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "id": "0f08f036",
    "metadata": {},
    "outputs": [
@@ -921,7 +932,7 @@
        "Name: Borough, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "id": "688b210b",
    "metadata": {},
    "outputs": [
@@ -965,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "id": "559edfd3",
    "metadata": {},
    "outputs": [],
@@ -975,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "id": "5a0dab1b",
    "metadata": {},
    "outputs": [],
@@ -986,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "id": "4ad7f8f3",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1229,7 @@
        "9  September  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "id": "e3fb8c01",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "id": "1ae792a0",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1333,7 @@
        "5        Unknown        2504"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1f23863b",
    "metadata": {},
    "outputs": [
@@ -2195,7 +2206,8 @@
    ],
    "source": [
     "fig = px.bar(licenses_by_borough, x=\"Borough\",y=\"IssuedDate\", title=\"Dog licences by borough\")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "#It look like Manhattan the borought wiht the highest Dog licences"
    ]
   },
   {
@@ -2213,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "id": "e7ca2ff0",
    "metadata": {},
    "outputs": [],
@@ -2223,12 +2235,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
+   "id": "cf7f473c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "averageage = df.groupby(\"Borough\")[\"DogAgeAtLicense\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "78584a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Borough\n",
+       "Brooklyn         4.689987\n",
+       "Manhattan        5.225337\n",
+       "Queens           5.268548\n",
+       "Staten Island    5.977017\n",
+       "The Bronx        4.718667\n",
+       "Unknown          3.969649\n",
+       "Name: DogAgeAtLicense, dtype: float64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "averageage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af7df01b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cleaned.to_csv(\"final_dataset.csv\", index=False)"
+    "#df_cleaned.to_csv(\"final_dataset.csv\", index=False)"
    ]
   }
  ],
