Data cleaning in python done

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -856,7 +856,8 @@
    "id": "6f6bd602",
    "metadata": {},
    "source": [
-    "Let's change the data type for certain columns in the right format to help us find insight wiht the data"
+    "- Let's change the data type for certain columns in the right format to help us find insight wiht the data\n",
+    "- Also this can help us for example use date time function on the dates columns to extract the month or the year. "
    ]
   },
   {
@@ -975,13 +976,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "543107cc",
+   "metadata": {},
+   "source": [
+    "The following line of code create a new columns to store the Dog age when the licence is made\n",
+    "- This column can help us later to group the data by borough and get the average dog age. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "559edfd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['DogAgeAtLicense'] = df['IssuedDate'].dt.year - df['BirthYear']\n"
+    "df['DogAgeAtLicense'] = df['IssuedDate'].dt.year - df['BirthYear']\n",
+    "#this "
    ]
   },
   {
