Last update, Data cleaning done in Python

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -5,7 +5,7 @@
    "id": "ec6690c7",
    "metadata": {},
    "source": [
-    "## Import DATA"
+    "### Import DATA"
    ]
   },
   {
@@ -41,6 +41,14 @@
    ],
    "source": [
     "df = pd.read_csv(\"/Users/Marcy_Student/Desktop/Marcy_Projects/Mod2_Final_Project/data/Raw/NYC_Dog_Licensing_Dataset_20250713.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "804fa024",
+   "metadata": {},
+   "source": [
+    "- Quick overview of the data"
    ]
   },
   {
@@ -523,6 +531,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faf6c0a4",
+   "metadata": {},
+   "source": [
+    "- Let's check the data type for each column in the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "id": "70973c91",
@@ -669,38 +685,6 @@
    ],
    "source": [
     "df.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "2242f11c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2014, 2010, 2013, 2009, 2006, 2008, 2012, 2007, 2005, 2011, 2001,\n",
-       "       2004, 2003, 2000, 2002, 1991, 1992, 1993, 2015, 2016, 1994, 1995,\n",
-       "       1996, 1997, 2017, 1998, 1999, 2018, 2019, 2020, 2021, '2012',\n",
-       "       '2021', '2010', '2018', '2020', '2015', '2017', '2019', '2011',\n",
-       "       '2014', '2013', '2016', '2009', '2006', '2007', '2008', '2001',\n",
-       "       '2005', '2004', '2002', '2003', '2000', 'ERROR: #VALUE!', '1999',\n",
-       "       '1996', '1973', '1930', '1990', '1995', '1997', '2022', '1992',\n",
-       "       '1986', '1921', '1922', '1912', '1998', '2023', '1993', '1991',\n",
-       "       '1987', '1934', '1989', '1920', '1923', '18', '317', '720', '200',\n",
-       "       '21', '201', '221', '219', '202', '209', 2022, 2023, 203, 22, 519,\n",
-       "       202, 1973, 2024, 1987, 1968, 223, 222, 1970, 219, 1989, 19, 1,\n",
-       "       1934, 208, 1923, 209, 204, 18, 17, 1022], dtype=object)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"AnimalBirthYear\"].unique()"
    ]
   },
   {
@@ -2283,13 +2267,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96677e36",
+   "metadata": {},
+   "source": [
+    "Now Let's export the cleaned dataset\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "af7df01b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_cleaned.to_csv(\"final_dataset.csv\", index=False)"
+    "df_cleaned.to_csv(\"final_dataset.csv\", index=False)"
    ]
   }
  ],
