Data cleaning last update

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -971,23 +971,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "559edfd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['DogAgeAtLicense'] = df['IssuedDate'].dt.year - df['BirthYear']\n",
-    "#this "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
    "id": "5a0dab1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['IssueYear'] = df['IssuedDate'].dt.year\n",
-    "df['IssueMonth'] = df['IssuedDate'].dt.month_name()"
+    "df['IssueMonth'] = df['IssuedDate'].dt.month_name()\n",
+    "df['DogAgeAtLicense'] = df['IssueYear'] - df['BirthYear']\n",
+    "\n",
+    "#The following line of code create a new columns to store the Dog age when the licence is made\n",
+    "#This column can help us later to group the data by borough and get the average dog age. "
    ]
   },
   {
@@ -1335,6 +1328,50 @@
    ],
    "source": [
     "licenses_by_borough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "80c181af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IssueMonth\n",
+       "July         69134\n",
+       "August       67569\n",
+       "September    64879\n",
+       "March        62612\n",
+       "January      60504\n",
+       "June         60240\n",
+       "October      60160\n",
+       "May          58998\n",
+       "April        57396\n",
+       "February     56477\n",
+       "December     52955\n",
+       "November     50019\n",
+       "Name: IssuedDate, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"IssueMonth\")[\"IssuedDate\"].count().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a264d53",
+   "metadata": {},
+   "source": [
+    "Look like the licences are most made in summer!\n",
+    "- July it the peek month\n",
+    "- November is the month with the lowest licences made. "
    ]
   },
   {
@@ -2220,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "id": "e7ca2ff0",
    "metadata": {},
    "outputs": [],
